variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:5: error: '(' expected but identifier found.
                            if estSurBiscuit() {biscuit=biscuit+1}} 
                               ^RunHalf:5: error: illegal start of simple expression
                            if estSurBiscuit() {biscuit=biscuit+1}} 
                                                                  ^